fix spacing for discounted prices

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -277,6 +277,16 @@ cart-drawer-items {
   margin-top: 0;
 }
 
+.cart-drawer .cart-item__price-wrapper .cart-item__discounted-prices {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
+
+.cart-drawer .unit-price {
+  margin-top: 0.6rem;
+}
+
 .cart-drawer .cart-items .cart-item__quantity {
   padding-top: 0;
   grid-column: 2 / 5;
